src/components/styles.css
:root {
    --background: #f1f2f2;
}

* {
  box-sizing: border-box;
}

html, body {
  padding: 1em;
}

html {
  margin: auto;
}

body {
  background-color: var(--background);
}


figcaption {
  text-align: center;
  word-break: break-word;
  width: 100px;
  padding-top: 3px;
  margin: auto;
}

img {
  width: 100px;
  height: auto;
  box-shadow: 0px 0px 5px rgba(0,0,0,.4);
  opacity: 0.99;
  cursor: move;
}

img:hover{
  box-shadow: 0px 0px 10px rgba(0,0,0,.4);
}

p {
  color: #303032;
  line-height: 1.2rem;
  margin-bottom: 0;
}

b {
  padding-right: 0.3em;
}

table, caption, tbody, tfoot, thead, tr, th, td {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

td {
  transition: all 0.5s ease;
}

caption {
  padding-bottom: 0.5em;
  color: #303032;
  text-align: left;
  background-color: var(--background);
  white-space: nowrap;
}

table {
  table-layout: fixed;
  border-collapse: collapse;
  background-color: var(--background);
  float: left;
  display: table-cell;
}

li {
  display: block;
  text-decoration: none;
}

ul {
  padding-left: 1rem;
  display: table-cell;
  white-space: nowrap;
}

.pad-1 {
  padding: 0.1em;
}
.pad-2 {
  padding: 0.2em;
}
.pad-3 {
  padding: 0.3em;
}
.pad-4 {
  padding: 0.4em;
}
.pad-5 {
  padding: 0.5em;
}

.home {
  vertical-align: middle;
  width: 100%;
}

.search {
  display: block;
  position: absolute;
}

.results {
  margin: auto;
  max-height: 100vh;
  overflow: auto;
}

.collage-column {
    padding-top: 3.7rem !important;
}

.collage-container {
  background-color: var(--background);
  width: max-content;
  display: flex;
  flex-direction: column;
}

.collage-padded {
    padding: 1rem;
}

.collage-image {
  display: block;
}

.collage-type{
    margin-bottom: .5rem;
}

.album-big {
  width: 150px;
  height: auto;
}

.album-big + figcaption {
  width: 150px;
}

.album {
  width: 100px;
  height: auto;
}

.film {
  width: 100px;
  height: 150px;
}

.game {
    height: 100px;
    width: 150px;
}

.count {
  display: flex;
  justify-content: space-between;
  margin-bottom: .5rem;
}

.count-container {
  max-width: 105px;
}

.top-10-top {
  margin: 1em 0;
}

.top-10-bottom {
  margin: 1em 0;
}

